fix: List.of can't handle null values